--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,13 +6,13 @@ $fa-font-path: "../fonts/font-awesome";
 @import "../components/fontawesome/scss/mixins";
 @import "../components/fontawesome/scss/path";
 @import "../components/fontawesome/scss/core";
-//@import "../components/fontawesome/scss/larger";
+@import "../components/fontawesome/scss/larger";
 @import "../components/fontawesome/scss/fixed-width";
 @import "../components/fontawesome/scss/list";
-//@import "bordered-pulled";
-//@import "spinning";
-//@import "rotated-flipped";
-//@import "stacked";
+@import "../components/fontawesome/scss/bordered-pulled";
+@import "../components/fontawesome/scss/spinning";
+@import "../components/fontawesome/scss/rotated-flipped";
+@import "../components/fontawesome/scss/stacked";
 @import "../components/fontawesome/scss/icons";
 
 body, html, button {
@@ -117,6 +117,10 @@ md-item-content {
     color: inherit;
     text-decoration: none;
   }
+}
+
+span.fa-fw {
+  display: inline-block;
 }
 
 .fa-fw {
