--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1637,7 +1637,13 @@ body, html, button {
 .text-left {
   text-align: left !important; }
 
+.no-break {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
 md-sidenav.md-sidenav-left, md-sidenav.md-sidenav-right {
+  min-width: 0;
   max-width: 95%;
   max-height: 100%;
   overflow-y: auto;
