--- a/src/jade/templates/ngCalendar.jade
+++ b/src/jade/templates/ngCalendar.jade
@@ -2,13 +2,13 @@ section.ng-calendar(layout='column', layout-fill, flex)
     md-toolbar(md-swipe-right='prev()', md-swipe-left='next()')
         .md-toolbar-tools(layout='column')
             md-button(ng-click='prev()') &laquo;
-            h2.text-center(flex) {{ calendar.start | dateLocale:'MMMM yyyy' }}
+            h2.text-center(flex) {{ calendar.start | dateLocale:'MMMM yyyy':language.translator.language }}
             md-button(ng-click='next()') &raquo;
     md-subheader.md-primary.no-side-padding
         .md-subheader-content(layout='row', layout-fill)
             .ng-calendar-subhead-day(flex, ng-repeat='day in calendar.weeks[0]')
-                span(hide-gt-md) {{ day | dateLocale:'EEE' }}
-                span(hide, show-lg, show-gt-lg) {{ day | dateLocale:'EEEE' }}
+                span(hide-gt-md) {{ day | dateLocale:'EEE':language.translator.language }}
+                span(hide, show-lg, show-gt-lg) {{ day | dateLocale:'EEEE':language.translator.language }}
     md-content(flex, layout='column', layout-fill)
         .ng-calendar-month(flex, layout='row', layout-fill, ng-repeat='week in calendar.weeks')
             .ng-calendar-week(flex, layout='column', layout-fill, layout-align='center center', ng-repeat='day in week')
