--- a/src/jade/views/date.jade
+++ b/src/jade/views/date.jade
@@ -5,13 +5,13 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
             md-button(flex, ng-click='goToReport()', aria-label='Go to report')
                 span {{ "Go to report" | translate:language.translator.current }}
             md-button(ng-click='nextDay()', aria-label='Next day') &raquo;
-    md-subheader.md-primary
-        span {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
+    md-subheader.md-primary.no-break
+        span {{ date|dateLocale:'EEEE, MMMM d, yyyy':language.translator.language }}
     md-content(layout='column', layout-padding, layout-wrap)
         md-list.padded
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.h }} {{ "Hours" | translate:lang }}
+                    label.no-break(flex) {{ day.h }} {{ "Hours" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.h < 0.5', ng-click='increment("h", -0.5)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("h", 0.5)', aria-label='Add')
@@ -19,7 +19,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.p }} {{ "Hours (planned)" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.p }} {{ "Hours (planned)" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.p < 0.5', ng-click='increment("p", -0.5)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("p", 0.5)', aria-label='Add')
@@ -27,7 +27,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.m }} {{ "Magazines" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.m }} {{ "Magazines" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.m < 1', ng-click='increment("m", -1)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("m", 1)', aria-label='Add')
@@ -35,7 +35,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.t }} {{ "Tracts & Brochures" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.t }} {{ "Tracts & Brochures" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.t < 1', ng-click='increment("t", -1)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("t", 1)', aria-label='Add')
@@ -43,7 +43,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.b }} {{ "Books" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.b }} {{ "Books" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.b < 1', ng-click='increment("b", -1)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("b", 1)', aria-label='Add')
@@ -51,7 +51,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.r }} {{ "Return visits" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.r }} {{ "Return visits" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.r < 1', ng-click='increment("r", -1)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("r", 1)', aria-label='Add')
@@ -59,7 +59,7 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
-                    label(flex) {{ day.s }} {{ "Bible studies" | translate:language.translator.current }}
+                    label.no-break(flex) {{ day.s }} {{ "Bible studies" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.s < 1', ng-click='increment("s", -1)', aria-label='Subtract')
                         i.fa.fa-minus
                     md-button.md-primary(ng-click='increment("s", 1)', aria-label='Add')
@@ -68,5 +68,5 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
             md-item
                 md-item-content(layout='row', layout-fill)
                     md-input-container(flex)
-                        label {{ "Notes" | translate:language.translator.current }}
+                        label.no-break {{ "Notes" | translate:language.translator.current }}
                         textarea(auto-grow, ng-model='day.n')
