--- a/src/jade/views/report.jade
+++ b/src/jade/views/report.jade
@@ -2,48 +2,49 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextMonth()', ng-swipe-r
     md-toolbar.nav-submenu
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevMonth()') &laquo;
-            h3.text-center(flex) {{ date|dateLocale:'MMMM yyyy' }}
+            h3.text-center.no-break(flex) {{ date|dateLocale:'MMMM yyyy':language.translator.language }}
             md-button(ng-click='nextMonth()') &raquo;
-    md-subheader.md-primary {{ "Monthly report" | translate:language.translator.current }}
-    md-list.padded
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.h || 0 }}
-                    | {{ "Hours" | translate:lang }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.p || 0 }}
-                    | {{ "Hours (planned)" | translate:lang }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.m || 0 }}
-                    | {{ "Magazines" | translate:lang }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.t }}
-                    | {{ "Tracts & brochures" | translate:language.translator.current }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.b || 0 }}
-                    | {{ "Books" | translate:language.translator.current }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.r || 0 }}
-                    | {{ "Return visits" | translate:language.translator.current }}
-            md-divider
-        md-item
-            md-item-content
-                p
-                    span.fa-fw {{ month.s || 0 }}
-                    | {{ "Bible studies" | translate:language.translator.current }}
+    md-subheader.md-primary.no-break {{ "Monthly report" | translate:language.translator.current }}
+    md-content
+        md-list.padded
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.h || 0 }}
+                        | {{ "Hours" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.p || 0 }}
+                        | {{ "Hours (planned)" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.m || 0 }}
+                        | {{ "Magazines" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.t }}
+                        | {{ "Tracts & brochures" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.b || 0 }}
+                        | {{ "Books" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p
+                        span.fa-fw {{ month.r || 0 }}
+                        | {{ "Return visits" | translate:language.translator.current }}
+                md-divider
+            md-item
+                md-item-content
+                    p.no-break
+                        span.fa-fw {{ month.s || 0 }}
+                        | {{ "Bible studies" | translate:language.translator.current }}
