--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -59,8 +59,15 @@ body, html, button {
   text-align: left !important;
 }
 
+.no-break {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 md-sidenav {
   &.md-sidenav-left, &.md-sidenav-right {
+    min-width: 0;
     max-width: 95%;
     max-height: 100%;
     overflow-y: auto;
