--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,7 +13,7 @@ html.no-js(lang='{{ language.current }}', ng-app='ministryApp', ng-csp, ng-cloak
             md-sidenav.md-sidenav-left.md-whiteframe-z1(md-component-id='left', md-is-locked-open="$media('gt-sm')")
                 md-toolbar
                     .md-toolbar-tools
-                        h3.no-break(flex) {{ "Navigation" | translate:language.translator.current }}
+                        h3.no-break(flex) {{ "Menu" | translate:language.translator.current }}
                         md-button.icon(hide-gt-md, ng-click='closeNav()', aria-label='Close nav')
                             span.fa.fa-times
                 md-content
@@ -42,21 +42,14 @@ html.no-js(lang='{{ language.current }}', ng-app='ministryApp', ng-csp, ng-cloak
                                     i.fa.fa-fw.fa-cogs
                                     | {{ "Settings" | translate:language.translator.current }}
                             md-divider
-                        md-item.link.padded
-                            md-item-content
-                                a.no-break(href='https://github.com/BitolaCo/service-app/issues')
-                                    i.fa.fa-fw.fa-question
-                                    | {{ "Help" | translate:language.translator.current }}
-                            md-divider
             md-content(flex, layout='row')
                 div(layout='column', layout-fill)
                     md-toolbar.main-nav
                         .md-toolbar-tools
                             md-button.icon(ng-click='toggleNav()', hide-gt-sm, aria-label='Toggle side nav')
                                 i.fa.fa-bars
-                            h3.no-break.text-center(flex, hide-gt-sm, aria-label='Service App') {{ "Service App" | translate:language.translator.current }}
-                            h3.no-break.text-left.app-title(flex, hide-sm, aria-label='Service App')
-                                img(src='/img/logo.svg', alt='{{ "Service App" | translate:language.translator.current }}')
+                            h3.no-break.app-title(flex, aria-label='Service App')
+                                img(hide-sm, src='/img/logo.svg', alt='{{ "Service App" | translate:language.translator.current }}')
                                 span {{ "Service App" | translate:language.translator.current }}
                     md-content(ng-view, layout='column', layout-fill, flex)
         script(src='js/app.js')
