Removed fonts for lower memory footprint

--- a/src/jade/views/date.jade
+++ b/src/jade/views/date.jade
@@ -13,57 +13,57 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextDay()', ng-swipe-rig
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.h }} {{ "Hours" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.h < 0.5', ng-click='increment("h", -0.5)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("h", 0.5)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.p }} {{ "Hours (planned)" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.p < 0.5', ng-click='increment("p", -0.5)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("p", 0.5)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.m }} {{ "Magazines" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.m < 1', ng-click='increment("m", -1)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("m", 1)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.t }} {{ "Tracts & Brochures" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.t < 1', ng-click='increment("t", -1)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("t", 1)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.b }} {{ "Books" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.b < 1', ng-click='increment("b", -1)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("b", 1)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.r }} {{ "Return visits" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.r < 1', ng-click='increment("r", -1)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("r", 1)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
                     label.no-break(flex) {{ day.s }} {{ "Bible studies" | translate:language.translator.current }}
                     md-button.md-primary(ng-hide='day.s < 1', ng-click='increment("s", -1)', aria-label='Subtract')
-                        i.fa.fa-minus
+                        span.symbol &#45;
                     md-button.md-primary(ng-click='increment("s", 1)', aria-label='Add')
-                        i.fa.fa-plus
+                        span.symbol &#43;
                 md-divider
             md-item
                 md-item-content(layout='row', layout-fill)
