--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,22 +1,14 @@
-$primary-color: #8BC34A;
-$fa-font-path: "../fonts/font-awesome";
 
-@import "_roboto";
-@import "../components/fontawesome/scss/variables";
-@import "../components/fontawesome/scss/mixins";
-@import "../components/fontawesome/scss/path";
-@import "../components/fontawesome/scss/core";
-@import "../components/fontawesome/scss/larger";
-@import "../components/fontawesome/scss/fixed-width";
-@import "../components/fontawesome/scss/list";
-@import "../components/fontawesome/scss/bordered-pulled";
-@import "../components/fontawesome/scss/spinning";
-@import "../components/fontawesome/scss/rotated-flipped";
-@import "../components/fontawesome/scss/stacked";
-@import "../components/fontawesome/scss/icons";
+//@import "_roboto";
+
 
 body, html, button {
   color: #333;
+}
+
+.symbol {
+  font-size: 1.33em;
+  line-height: 1.33;
 }
 
 .md-tile-content, md-input-group {
@@ -94,18 +86,6 @@ md-toolbar {
 
 .md-button {
   min-width: 48px;
-}
-
-.md-button
-
-.home-splash {
-  height: 100%;
-  width: 100%;
-  display: block;
-  margin: 0 auto;
-  padding: 2em;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 a, .link {
@@ -192,10 +172,6 @@ h3 {
   background: #f0f0f0;
 }
 
-.ng-calendar-content {
-
-}
-
 md-item {
   display: block;
 }
@@ -207,7 +183,7 @@ md-item {
 
 .app-title {
   img {
-    width: 2em;
+    width: 1.5em;
     margin-right: .5em;
     vertical-align: middle;
   }
@@ -230,10 +206,6 @@ md-toolbar, .md-toolbar-tools {
   h1, h2, h3, h4, h5, h6, p, i {
     color: #fff;
   }
-}
-
-.md-dialog-container {
-  background: rgba(0, 0, 0, .5);
 }
 
 md-content {
@@ -265,11 +237,4 @@ textarea[auto-grow].md-input {
   background: #f9f9f9;
   border-bottom: 1px solid #eee;
   margin-right: 0;
-}
-
-.slider-container {
-  margin-bottom: 1em;
-  label {
-    padding-top: 1em;
-  }
 }
